[package]
name = "lend-link"
version = "0.1.0"
edition = "2024"

[dependencies]
sha3 = "0.12.0"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2.2", features = ["rand_core", "serde"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = "0.40.1"
